# pyrust-exec-engine

./: .gitignore  Cargo.toml  fetch_products.py  main.py  py_rust_eval.py  pyproject.toml
.claude/skills/explain-code/: SKILL.md
.env/: pyvenv.cfg
data/: dummy_sales.csv
src/: csv_data_reader.rs  lib.rs  product_http_reader.rs
