[package]
name = "pyrust-exec-engine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrust_exec_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
